feat: add sales crud logic with business logic handling